--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/fanpage",
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
@@ -130,7 +130,7 @@
       }
     }
   },
-  "defaultProject": "default",
+  "defaultProject": "fanpage",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "m",
